<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/rg_dlg_select_language">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_english_dlg_select_language"
            android:id="@+id/rb_english_dlg_select_language"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_ukrainian_dlg_select_language"
            android:id="@+id/rb_ukrainian_dlg_select_language" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_russian_dlg_select_language"
            android:id="@+id/rb_russian_dlg_select_language" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_accept_dlg_select_language"
        android:id="@+id/btn_ok_dlg_select_language"
        android:layout_gravity="end"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>